Production fixes for Railway deployment
- Pin all dependency versions for stable deployment
- Fix DATABASE_URL parsing edge cases with fallbacks
- Add production debug logging
- Ensure NumPy compatibility with ChromaDB

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-fastapi
-uvicorn[standard]
+# Production-ready requirements with pinned versions
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
 chromadb==0.4.24
-numpy<2.0
-langchain
-langchain-openai
-python-multipart
-pydantic
-python-dotenv
-PyPDF2
-python-docx
-tiktoken
-setuptools
-python-jose[cryptography]
-passlib[bcrypt]
-psycopg2-binary
+numpy<2.0,>=1.26.4
+langchain==0.1.0
+langchain-openai==0.1.0
+python-multipart==0.0.6
+pydantic==2.11.9
+python-dotenv==1.1.1
+PyPDF2==3.0.1
+python-docx==1.1.2
+tiktoken==0.7.0
+setuptools>=65.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+psycopg2-binary==2.9.9
