--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Frontend Dockerfile for React Application
+# Frontend Dockerfile for React Application - Simple approach like mywelltax-ui
 FROM node:18-alpine
 
 # Set working directory
@@ -10,23 +10,29 @@ COPY package*.json ./
 # Install dependencies
 RUN npm ci --only=production
 
+# Copy environment variables as .env (will be .env for local, .env.production for production)
+COPY .env .env
+
 # Copy source code
 COPY . .
 
 # Build the application
 RUN npm run build
 
-# Use nginx to serve the built app
-FROM nginx:alpine
+# Production stage - use serve like mywelltax-ui
+FROM node:17-alpine
+WORKDIR /app
 
 # Copy built app from previous stage
-COPY --from=0 /app/build /usr/share/nginx/html
+COPY --from=0 /app/build .
 
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Install serve globally
+RUN npm install -g serve
 
-# Expose port
-EXPOSE 80
+# Create a simple startup script to handle PORT env var
+RUN echo '#!/bin/sh' > /start.sh && \
+    echo 'npx serve -s /app -l ${PORT:-3000}' >> /start.sh && \
+    chmod +x /start.sh
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Start the server
+CMD ["/start.sh"]
