--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-# Production-ready requirements with pinned versions
-fastapi==0.116.1
+# Production-ready requirements with compatible versions
+fastapi==0.115.9
 uvicorn[standard]==0.35.0
-chromadb==0.4.24
+chromadb==1.1.0
 numpy<2.0,>=1.26.4
-langchain==0.1.0
-langchain-openai==0.1.0
+langchain>=0.1.0,<0.3.0
+langchain-openai>=0.1.0,<0.3.0
 python-multipart==0.0.6
-pydantic==2.11.9
+pydantic>=2.0.0,<3.0.0
 python-dotenv==1.1.1
 PyPDF2==3.0.1
 python-docx==1.1.2
