--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DOCUMIND",
-  "name": "DOCUMIND - AI Document Assistant Platform",
+  "short_name": "PERSONA",
+  "name": "PERSONA - Backend as a Service",
   "icons": [
     {
       "src": "favicon.ico",
