--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,192 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ===========================
+# Python
+# ===========================
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+*.manifest
+*.spec
 
-# dependencies
-/node_modules
-/.pnp
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+*.venv
+
+# PyInstaller
+*.spec
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# ===========================
+# Node.js / JavaScript
+# ===========================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.npm
+.yarn-integrity
+.pnp
 .pnp.js
 
-# testing
+# Build outputs
+/build
+/dist
+/.next/
+/out/
+
+# Testing
 /coverage
 
-# production
-/build
-
-# misc
-.DS_Store
+# ===========================
+# Environment & Secrets
+# ===========================
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
+config.json
+secrets.json
+credentials.json
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-config/*
-.venv/*
-*/__pycache__/*
-
-# Environment and secrets
-.env*
+# ===========================
+# Database Files
+# ===========================
 *.db
+*.sqlite
+*.sqlite3
 app.db
+chroma_db/
+pgdata/
+*.sql.gz
 
+# ===========================
+# Logs
+# ===========================
+*.log
+logs/
+*.log.*
+combined.log
+error.log
+
+# ===========================
+# IDEs & Editors
+# ===========================
+# VSCode
+.vscode/
+*.code-workspace
+
+# PyCharm
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+.*.sw[a-p]
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+
+# ===========================
+# Operating System
+# ===========================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Linux
+.directory
+.Trash-*
+
+# ===========================
+# Docker
+# ===========================
+docker-compose.override.yml
+.dockerignore
+
+# ===========================
+# Temporary Files
+# ===========================
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+*~
+
+# ===========================
+# Project Specific
+# ===========================
 # ChromaDB data
 chroma_db/
-/chroma_db
 
-# Logs
-*.log
+# Uploaded documents
+uploads/
+documents/
 
-# Python
-__pycache__/
-*.py[cod]
-*.so
-.Python
-
-# Database
-*.sqlite3
-*.db
+# Migration backups
+*.backup
+migrations/*.pyc
