--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,81 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# ===========================
+# Dependencies
+# ===========================
 /node_modules
 /.pnp
 .pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# testing
+# ===========================
+# Testing
+# ===========================
 /coverage
+.nyc_output
 
-# production
+# ===========================
+# Production
+# ===========================
 /build
+/dist
 
-# misc
-.DS_Store
+# ===========================
+# Environment Variables
+# ===========================
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# ===========================
+# Logs
+# ===========================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+lerna-debug.log*
+
+# ===========================
+# Operating System
+# ===========================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+
+# ===========================
+# IDEs & Editors
+# ===========================
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+*~
+
+# ===========================
+# Misc
+# ===========================
+*.pem
+.cache
+.eslintcache
+
+# ===========================
+# Service Worker
+# ===========================
+/public/service-worker.js
+/public/workbox-*.js
