--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Production-ready requirements with compatible versions
 fastapi==0.115.9
 uvicorn[standard]==0.35.0
-chromadb==1.1.0
+pgvector==0.2.5
 numpy<2.0,>=1.26.4
 langchain>=0.1.0,<0.3.0
 langchain-openai>=0.1.0,<0.3.0
